# mai_os_labs

./: .clang-format  .gitignore  CMakeLists.txt  README.md  format.sh
labs/lab1/: CMakeLists.txt
labs/lab1/child/: child.cpp
labs/lab1/lib/: CMakeLists.txt
labs/lab1/lib/system/headers/: os.hpp
labs/lab1/lib/system/src/: os_unix.cpp
labs/lab1/parent/: parent.cpp
labs/lab2/: CMakeLists.txt  main.cpp
labs/lab2/lib/: CMakeLists.txt
labs/lab2/lib/determinant/: determinant.cpp  determinant.hpp
labs/lab2/lib/factorial/: factorial.hpp
labs/lab2/lib/matrix/: matrix.cpp  matrix.hpp
labs/lab2/lib/permutations/: permutations.cpp  permutations.hpp
labs/lab2/lib/system/: threads.cpp  threads.hpp
labs/lab3/: CMakeLists.txt
labs/lab3/child/: child.cpp
labs/lab3/lib/: CMakeLists.txt
labs/lab3/lib/exceptions/: exceptions.hpp
labs/lab3/lib/queue/: queue.hpp  queue.ipp
labs/lab3/lib/system/: os.hpp  os_unix.ipp
labs/lab3/parent/: parent.cpp
labs/lab4/: CMakeLists.txt  dynamic_lib_use.cpp  statically_linked.cpp
labs/lab4/exceptions/: exceptions.hpp
labs/lab4/libs/: CMakeLists.txt
labs/lab4/libs/exp_cal/: definition_based.cpp  exp.hpp  taylor_based.cpp
labs/lab4/libs/translation/: translation.hpp  translation_binary.cpp  translation_ternary.cpp
labs/lab4/sys/: library_loader.hpp  library_loader_unix.ipp
